trigger/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-demo-dev-eventlistener
  namespace: news-demo-dev
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /listener
            pathType: Prefix
            backend:
              service:
                name: el-news-demo-dev-listener
                port:
                  number: 8080
